Remove abstract ExpressionInspection class (large)